# rust_action_dispatch

./: Cargo.toml  README.md  docker-compose.yaml
agent/: Cargo.toml
agent/src/: job_dispatch.rs  main.rs
central-command/: Cargo.toml
central-command/keys/: README.md
central-command/src/: agent.rs  agent_manager.rs  command_receiver.rs  connection_manager.rs  main.rs
core-logic/: Cargo.toml
core-logic/src/: communications.rs  lib.rs
core-logic/src/datastore/: agent.rs  agents.rs  jobs.rs  logs.rs  mod.rs  runs.rs
data/: jobs.json
keys/: README.md  genkeys.sh
test_data/: jobs.json
webui/: Cargo.toml  rocket.toml
webui/src/: agents.rs  data_page.rs  jobs.rs  main.rs  runs.rs
webui/static/: agent.css  agents.js  core.js  jobs.js  pagination.js  runs.js  style.css
webui/templates/: agents.html.j2  edit_agent.html.j2  filter.html.j2  index.html.j2  jobs.html.j2  layout.html.j2  logs.html.j2  nav.html.j2  pagination.html.j2  runs.html.j2  status.html.j2
