[workspace]
resolver = "2"
members = [ "agent", "central-command","core-logic"]

[workspace.package]
name = "Rust Action Dispatch"
description = "Rust Action Dispatch"
edition = "2024"
version = "0.1.0"
authors = ["michael.mileusnich@gmail.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mikemiles-dev/rust_action_dispatch/"

[workspace.dependencies]
core-logic = { path = "core-logic" }
chrono = { version = "0.4.23", features = ["serde"] }
log = { version = "0.4.27"  }
tokio = { version = "1.45", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
rkyv = { version = "0.8.10" }