[package]
name = "central-command"
version.workspace = true
edition.workspace = true
authors.workspace =  true
publish = false


[dependencies]
bson.workspace = true
core-logic.workspace = true
log.workspace = true
mongodb.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
