[package]
name = "webui"
description.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
bson.workspace = true
core-logic.workspace = true
futures.workspace = true
rocket_dyn_templates.workspace = true
rocket.workspace = true
mongodb.workspace = true
